Corrected contact bugs
Added CSS to correct shifting when modal was shown caused by
disappearance of the scrollbar. Added conditional display for phone
numbers to display appropriately formatted version depending on screen
size

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,3 +45,30 @@ blockquote {
 .featurette-heading {
   margin-top: 0;
 }
+
+.modal {
+  overflow-y: auto;
+}
+
+.modal-open {
+  overflow: auto;
+}
+
+// Use appropriate phone link depending on target
+#phone-number-mobile {
+  display: inline;
+}
+
+#phone-number-desktop {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  #phone-number-mobile {
+    display: none;
+  }
+
+  #phone-number-desktop {
+    display: inline;
+  }
+}
